--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -46,6 +46,16 @@
 	year      = {1996},
 	publisher = {Academy of Management Briarcliff Manor, NY 10510}
 }
+@article{bullmore2009complex,
+	title     = {Complex brain networks: graph theoretical analysis of structural and functional systems},
+	author    = {Bullmore, Ed and Sporns, Olaf},
+	journal   = {Nature reviews neuroscience},
+	volume    = {10},
+	number    = {3},
+	pages     = {186--198},
+	year      = {2009},
+	publisher = {Nature Publishing Group}
+}
 @article{casey1989computational,
 	author  = {Casey, Gerard and Moran, Aidan},
 	year    = {2012},
@@ -134,6 +144,16 @@
 	year      = {2006},
 	publisher = {MIT Press}
 }
+@article{hoverstad2011noise,
+	title     = {Noise and the evolution of neural network modularity},
+	author    = {H{\o}verstad, Boye Annfelt},
+	journal   = {Artificial life},
+	volume    = {17},
+	number    = {1},
+	pages     = {33--50},
+	year      = {2011},
+	publisher = {MITP}
+}
 @article{ingalhalikar2014sex,
 	title     = {Sex differences in the structural connectome of the human brain},
 	author    = {Ingalhalikar, Madhura and Smith, Alex and Parker, Drew and Satterthwaite, Theodore D and Elliott, Mark A and Ruparel, Kosha and Hakonarson, Hakon and Gur, Raquel E and Gur, Ruben C and Verma, Ragini},
@@ -191,6 +211,13 @@
 	note         = {Dostęp: 20 maja 2021},
 	organization = {Lambda labs}
 }
+@inproceedings{lin2015bilinear,
+	title     = {Bilinear cnn models for fine-grained visual recognition},
+	author    = {Lin, Tsung-Yu and RoyChowdhury, Aruni and Maji, Subhransu},
+	booktitle = {Proceedings of the IEEE international conference on computer vision},
+	pages     = {1449--1457},
+	year      = {2015}
+}
 @article{mandt2017stochastic,
 	title   = {Stochastic gradient descent as approximate bayesian inference},
 	author  = {Mandt, Stephan and Hoffman, Matthew D and Blei, David M},
@@ -215,6 +242,15 @@
 	pages     = {115--133},
 	year      = {1943},
 	publisher = {Springer}
+}
+@article{meunier2009hierarchical,
+	title     = {Hierarchical modularity in human brain functional networks},
+	author    = {Meunier, David and Lambiotte, Renaud and Fornito, Alex and Ersche, Karen and Bullmore, Edward T},
+	journal   = {Frontiers in neuroinformatics},
+	volume    = {3},
+	pages     = {37},
+	year      = {2009},
+	publisher = {Frontiers}
 }
 @book{minsky2017perceptrons,
 	title     = {Perceptrons: An introduction to computational geometry},
@@ -259,6 +295,13 @@
 	year      = {1996},
 	publisher = {Springer}
 }
+@inproceedings{schmidt1998modularity,
+	title     = {Modularity: a concept for new neural network architectures},
+	author    = {Schmidt, ALBRECHT and Bandar, ZUHAIR},
+	booktitle = {Proc. IASTED International Conf. Computer Systems and Applications},
+	pages     = {26--29},
+	year      = {1998}
+}
 @article{searle1980minds,
 	title   = {Minds, brains, and programs},
 	author  = {Searle, John R and others},
@@ -274,6 +317,18 @@
 	number  = {12},
 	pages   = {310--316},
 	year    = {2017}
+}
+@article{simon1962architecture,
+	issn      = {0003049X},
+	url       = {http://www.jstor.org/stable/985254},
+	author    = {Herbert A. Simon},
+	journal   = {Proceedings of the American Philosophical Society},
+	number    = {6},
+	pages     = {467--482},
+	publisher = {American Philosophical Society},
+	title     = {The Architecture of Complexity},
+	volume    = {106},
+	year      = {1962}
 }
 @article{solari2011cognitive,
 	title     = {Cognitive consilience: primate non-primary neuroanatomical circuits underlying cognition},
