--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -258,12 +258,13 @@
 	year      = {2017},
 	publisher = {MIT press}
 }
-@incollection{newell2007computer,
-	title     = {Computer science as empirical inquiry: Symbols and search},
-	author    = {Newell, Allen and Simon, Herbert A},
-	booktitle = {ACM Turing award lectures},
-	pages     = {1975},
-	year      = {2007}
+@article{newell1981computer,
+	title   = {Computer science as empirical inquiry: Symbols and search},
+	author  = {Newell, Allen and Simon, Herbert A},
+	volume  = {19},
+	year    = {1981},
+	pages   = {113--26},
+	journal = {Communications of the Association for Computing Machinery}
 }
 @inproceedings{real2017large,
 	title        = {Large-scale evolution of image classifiers},
