Zmiania czcionki strony tytułowej

--- a/Source/thesis.tex
+++ b/Source/thesis.tex
@@ -1,11 +1,12 @@
 \documentclass[12pt]{ociamthesis}
-
+\usepackage{helvet}
 \usepackage{amssymb}
 \usepackage[utf8]{inputenc}
-\usepackage{polski}
+\usepackage[T1]{polski}
 \usepackage{url}
 \usepackage[hidelinks]{hyperref}
 \usepackage[table,xcdraw]{xcolor}
+\usepackage[leftbars]{changebar}
 \hypersetup{
 	pdftitle={Uczenie głębokie i maszynowe a mózg},
 	pdfsubject={Praca licencjacka},
@@ -13,6 +14,8 @@
 	pdfkeywords={}
 }
 \usepackage{graphicx}
+
+\setlength{\changebarsep}{-5em}
 
 \graphicspath{ {./Images/} }
 \AtBeginDocument{\let\textlabel\label}
@@ -26,7 +29,7 @@
 \engtitle{Deep and machine learning and the brain}
 \author{Mateusz Piotr Moruś}
 \albumnumber{292540}
-\university{Uniwersytet Marii Curie-Skłodowskiej w Lublinie}
+\university{UNIWERSYTET MARII CURIE-SKŁODOWSKIEJ W~LUBLINIE}
 \college{Wydział Filozofii i Socjologii}
 \field{Kognitywistyka}
 \speciality{-}
