--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -66,6 +66,12 @@
 	journal = {The Irish Journal of Psychology},
 	doi     = {10.1080/03033910.1989.10557739}
 }
+@article{chung2014empirical,
+	title   = {Empirical evaluation of gated recurrent neural networks on sequence modeling},
+	author  = {Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+	journal = {arXiv preprint arXiv:1412.3555},
+	year    = {2014}
+}
 @article{copeland1996alan,
 	title     = {On Alan Turing's anticipation of connectionism},
 	author    = {Copeland, B Jack and Proudfoot, Diane},
@@ -103,6 +109,22 @@
 	pages        = {1050--1059},
 	year         = {2016},
 	organization = {PMLR}
+}
+@article{graves2014neural,
+	title   = {Neural turing machines},
+	author  = {Graves, Alex and Wayne, Greg and Danihelka, Ivo},
+	journal = {arXiv preprint arXiv:1410.5401},
+	year    = {2014}
+}
+@article{gulccehre2016knowledge,
+	title     = {Knowledge matters: Importance of prior information for optimization},
+	author    = {G{\"u}l{\c{c}}ehre, {\c{C}}aǧlar and Bengio, Yoshua},
+	journal   = {The Journal of Machine Learning Research},
+	volume    = {17},
+	number    = {1},
+	pages     = {226--257},
+	year      = {2016},
+	publisher = {JMLR. org}
 }
 @article{harnad1990symbol,
 	title     = {The symbol grounding problem},
@@ -266,6 +288,14 @@
 	pages   = {113--26},
 	journal = {Communications of the Association for Computing Machinery}
 }
+@article{paprocki2020optimizing,
+	title   = {Optimizing information processing in brain-inspired neural networks},
+	author  = {Paprocki, B and Pregowska, A and Szczepanski, J},
+	journal = {Bulletin of the Polish Academy of Sciences. Technical Sciences},
+	volume  = {68},
+	number  = {2},
+	year    = {2020}
+}
 @inproceedings{real2017large,
 	title        = {Large-scale evolution of image classifiers},
 	author       = {Real, Esteban and Moore, Sherry and Selle, Andrew and Saxena, Saurabh and Suematsu, Yutaka Leon and Tan, Jie and Le, Quoc V and Kurakin, Alexey},
@@ -295,6 +325,12 @@
 	pages     = {21--36},
 	year      = {1996},
 	publisher = {Springer}
+}
+@article{saxe2013exact,
+	title   = {Exact solutions to the nonlinear dynamics of learning in deep linear neural networks},
+	author  = {Saxe, Andrew M and McClelland, James L and Ganguli, Surya},
+	journal = {arXiv preprint arXiv:1312.6120},
+	year    = {2013}
 }
 @inproceedings{schmidt1998modularity,
 	title     = {Modularity: a concept for new neural network architectures},
@@ -347,6 +383,16 @@
 	pages        = {1139--1147},
 	year         = {2013},
 	organization = {PMLR}
+}
+@article{taylor2011does,
+	title     = {Does the cost function of human motor control depend on the internal metabolic state?},
+	author    = {Taylor, Scott V and Faisal, Aldo A},
+	journal   = {BMC neuroscience},
+	volume    = {12},
+	number    = {1},
+	pages     = {1--2},
+	year      = {2011},
+	publisher = {Springer}
 }
 @incollection{vroon1987man,
 	title     = {Man-machine analogs and theoretical mainstreams in psychology},
