Zmiana nazwy sekcji w rozdziale 1

--- a/Source/chapter1.tex
+++ b/Source/chapter1.tex
@@ -58,7 +58,8 @@ W psychologii nadal dominowała i dominuje metafora komputerowa \cite{casey1989c
 Podobnie w filozofii -- nawet, gdy sieci neuronowe były już znane, nadal odwoływano się do komputera jako całości sprowadzając uczenie maszynowe do wyłącznie algorytmu wykonywanego przez urządzenie symboliczne \cite{searle1980minds}.
 Ogólne postrzeganie tej dziedziny sztucznej inteligencji nie wydawało się więc być bliżej działania mózgu -- a w konsekwencji człowieka -- niż tradycyjny pogląd na komputer.
 
-\section{Podstawowe różnice między uczeniem głębokim a funkcjonowaniem mózgu}
+\section{Rozbieżności między uczeniem głębokim a funkcjonowaniem mózgu}
+\label{sec:differences}
 
 Oczywiste jest, że mózg, jako byt architekturalnie, logicznie i fizycznie różny od uczenia maszynowego czy szerzej pojętych komputerów, będzie działał inaczej niż one.
 Nawet porównując ze sobą bezpośrednio mózgi dwóch osób okazuje się, że czasem są one nie tylko funkcjonalnie, ale także strukturalnie różne.
