Dalsza część rozdziału 3

--- a/Source/chapter2.tex
+++ b/Source/chapter2.tex
@@ -1,4 +1,5 @@
 \chapter{Modularny system symboliczny jako model działania mózgu}
+\label{ch:modularity}
 
 Uczenie maszynowe jest pojęciem algorytmicznym, jednak jego rzeczywista implementacja opiera się wyłącznie na najwydajniejszych obliczeniowo dostępnych systemach symbolicznych -- komputerach.
 Mózg z kolei jest najbardziej złożonym i potężnym systemem ``silnej inteligencji'' poznanym przez człowieka.
