--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -8,6 +8,13 @@
 	year      = {2003},
 	publisher = {Springer}
 }
+@article{baddeley2004psychology,
+	title   = {The psychology of memory},
+	author  = {Baddeley, Alan D},
+	journal = {The essential handbook of memory disorders for clinicians},
+	pages   = {1--13},
+	year    = {2004}
+}
 @article{bechtel1993case,
 	title     = {The case for connectionism},
 	author    = {Bechtel, William},
@@ -29,6 +36,16 @@
 	author    = {Braitenberg, Valentino},
 	year      = {1986},
 	publisher = {MIT press}
+}
+@article{brito2016nonlinear,
+	title     = {Nonlinear Hebbian learning as a unifying principle in receptive field formation},
+	author    = {Brito, Carlos SN and Gerstner, Wulfram},
+	journal   = {PLoS computational biology},
+	volume    = {12},
+	number    = {9},
+	pages     = {e1005070},
+	year      = {2016},
+	publisher = {Public Library of Science San Francisco, CA USA}
 }
 @article{brown2020language,
 	title   = {Language models are few-shot learners},
@@ -82,6 +99,16 @@
 	year      = {1996},
 	publisher = {Springer}
 }
+@article{crick2005function,
+	title     = {What is the function of the claustrum?},
+	author    = {Crick, Francis C and Koch, Christof},
+	journal   = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	volume    = {360},
+	number    = {1458},
+	pages     = {1271--1279},
+	year      = {2005},
+	publisher = {The Royal Society London}
+}
 @book{dayan2001theoretical,
 	title     = {Theoretical neuroscience: computational and mathematical modeling of neural systems},
 	author    = {Dayan, Peter and Abbott, Laurence F},
@@ -93,6 +120,24 @@
 	author    = {De Schutter, Erik},
 	year      = {2018},
 	publisher = {Springer}
+}
+@article{doya1999computations,
+	title     = {What are the computations of the cerebellum, the basal ganglia and the cerebral cortex?},
+	author    = {Doya, Kenji},
+	journal   = {Neural networks},
+	volume    = {12},
+	number    = {7-8},
+	pages     = {961--974},
+	year      = {1999},
+	publisher = {Elsevier}
+}
+@inproceedings{erhan2009difficulty,
+	title        = {The difficulty of training deep architectures and the effect of unsupervised pre-training},
+	author       = {Erhan, Dumitru and Manzagol, Pierre-Antoine and Bengio, Yoshua and Bengio, Samy and Vincent, Pascal},
+	booktitle    = {Artificial Intelligence and Statistics},
+	pages        = {153--160},
+	year         = {2009},
+	organization = {PMLR}
 }
 @incollection{fallon2017neuroanatomical,
 	title     = {Neuroanatomical background to understanding the brain of the young psychopath},
@@ -109,6 +154,16 @@
 	pages        = {1050--1059},
 	year         = {2016},
 	organization = {PMLR}
+}
+@article{galtier2013biological,
+	title     = {A biological gradient descent for prediction through a combination of stdp and homeostatic plasticity},
+	author    = {Galtier, Mathieu N and Wainrib, Gilles},
+	journal   = {Neural computation},
+	volume    = {25},
+	number    = {11},
+	pages     = {2815--2832},
+	year      = {2013},
+	publisher = {MIT Press}
 }
 @article{graves2014neural,
 	title   = {Neural turing machines},
@@ -166,6 +221,13 @@
 	year      = {2006},
 	publisher = {MIT Press}
 }
+@inproceedings{hinton2016can,
+	title     = {Can the brain do back-propagation?},
+	author    = {Hinton, Geoffrey},
+	booktitle = {Invited talk at Stanford University Colloquium on Computer Systems},
+	year      = {2016},
+	note      = {\url{http://web.stanford.edu/class/ee380/Abstracts/160427.html}}
+}
 @article{hoverstad2011noise,
 	title     = {Noise and the evolution of neural network modularity},
 	author    = {H{\o}verstad, Boye Annfelt},
@@ -203,6 +265,16 @@
 	year      = {2008},
 	publisher = {National Acad Sciences}
 }
+@article{jaeger2004harnessing,
+	title     = {Harnessing nonlinearity: Predicting chaotic systems and saving energy in wireless communication},
+	author    = {Jaeger, Herbert and Haas, Harald},
+	journal   = {science},
+	volume    = {304},
+	number    = {5667},
+	pages     = {78--80},
+	year      = {2004},
+	publisher = {American Association for the Advancement of Science}
+}
 @incollection{jaynes1988does,
 	title     = {How does the brain do plausible reasoning?},
 	author    = {Jaynes, Edwin Thompson},
@@ -210,6 +282,26 @@
 	pages     = {1--24},
 	year      = {1988},
 	publisher = {Springer}
+}
+@article{ji2007coordinated,
+	title     = {Coordinated memory replay in the visual cortex and hippocampus during sleep},
+	author    = {Ji, Daoyun and Wilson, Matthew A},
+	journal   = {Nature neuroscience},
+	volume    = {10},
+	number    = {1},
+	pages     = {100--107},
+	year      = {2007},
+	publisher = {Nature Publishing Group}
+}
+@article{kappel2014stdp,
+	title     = {STDP installs in winner-take-all circuits an online approximation to hidden Markov model learning},
+	author    = {Kappel, David and Nessler, Bernhard and Maass, Wolfgang},
+	journal   = {PLoS Comput Biol},
+	volume    = {10},
+	number    = {3},
+	pages     = {e1003511},
+	year      = {2014},
+	publisher = {Public Library of Science}
 }
 @incollection{koza1996automated,
 	title     = {Automated design of both the topology and sizing of analog electrical circuits using genetic programming},
@@ -224,6 +316,14 @@
 	author    = {Laird, John E},
 	year      = {2019},
 	publisher = {MIT press}
+}
+@article{lake2017building,
+	title     = {Building machines that learn and think like people},
+	author    = {Lake, Brenden M and Ullman, Tomer D and Tenenbaum, Joshua B and Gershman, Samuel J},
+	journal   = {Behavioral and brain sciences},
+	volume    = {40},
+	year      = {2017},
+	publisher = {Cambridge University Press}
 }
 @misc{li2020OpenAI,
 	title        = {OpenAI's GPT-3 Language Model: A Technical Overview},
@@ -254,6 +354,16 @@
 	pages     = {94},
 	year      = {2016},
 	publisher = {Frontiers}
+}
+@article{marmanis2015deep,
+	title     = {Deep learning earth observation classification using ImageNet pretrained networks},
+	author    = {Marmanis, Dimitrios and Datcu, Mihai and Esch, Thomas and Stilla, Uwe},
+	journal   = {IEEE Geoscience and Remote Sensing Letters},
+	volume    = {13},
+	number    = {1},
+	pages     = {105--109},
+	year      = {2015},
+	publisher = {IEEE}
 }
 @article{mcculloch1943logical,
 	title     = {A logical calculus of the ideas immanent in nervous activity},
@@ -288,6 +398,18 @@
 	pages   = {113--26},
 	journal = {Communications of the Association for Computing Machinery}
 }
+@article{o2014goal,
+	title   = {Goal-driven cognition in the brain: a computational framework},
+	author  = {O'Reilly, Randall C and Hazy, Thomas E and Mollick, Jessica and Mackie, Prescott and Herd, Seth},
+	journal = {arXiv preprint arXiv:1404.7591},
+	year    = {2014}
+}
+@article{o2014learning,
+	title   = {Learning through time in the thalamocortical loops},
+	author  = {O'Reilly, Randall C and Wyatte, Dean and Rohrlich, John},
+	journal = {arXiv preprint arXiv:1407.3432},
+	year    = {2014}
+}
 @article{paprocki2020optimizing,
 	title   = {Optimizing information processing in brain-inspired neural networks},
 	author  = {Paprocki, B and Pregowska, A and Szczepanski, J},
@@ -296,6 +418,12 @@
 	number  = {2},
 	year    = {2020}
 }
+@book{pashler1999psychology,
+	title     = {The psychology of attention},
+	author    = {Pashler, Harold E},
+	year      = {1999},
+	publisher = {MIT press}
+}
 @inproceedings{real2017large,
 	title        = {Large-scale evolution of image classifiers},
 	author       = {Real, Esteban and Moore, Sherry and Selle, Andrew and Saxena, Saurabh and Suematsu, Yutaka Leon and Tan, Jie and Le, Quoc V and Kurakin, Alexey},
@@ -303,6 +431,25 @@
 	pages        = {2902--2911},
 	year         = {2017},
 	organization = {PMLR}
+}
+@article{rodriguez2004derivation,
+	title     = {Derivation and analysis of basic computational operations of thalamocortical circuits},
+	author    = {Rodriguez, A and Whitson, J and Granger, R},
+	journal   = {Journal of cognitive neuroscience},
+	volume    = {16},
+	number    = {5},
+	pages     = {856--877},
+	year      = {2004},
+	publisher = {MIT Press}
+}
+@article{rolls2013mechanisms,
+	title     = {The mechanisms for pattern completion and pattern separation in the hippocampus},
+	author    = {Rolls, Edmund},
+	journal   = {Frontiers in systems neuroscience},
+	volume    = {7},
+	pages     = {74},
+	year      = {2013},
+	publisher = {Frontiers}
 }
 @techreport{rosenblatt1961principles,
 	title       = {Principles of neurodynamics. perceptrons and the theory of brain mechanisms},
@@ -346,6 +493,16 @@
 	pages   = {201--224},
 	year    = {1980}
 }
+@article{serre2007feedforward,
+	title     = {A feedforward architecture accounts for rapid categorization},
+	author    = {Serre, Thomas and Oliva, Aude and Poggio, Tomaso},
+	journal   = {Proceedings of the national academy of sciences},
+	volume    = {104},
+	number    = {15},
+	pages     = {6424--6429},
+	year      = {2007},
+	publisher = {National Acad Sciences}
+}
 @article{sharma2017activation,
 	title   = {Activation functions in neural networks},
 	author  = {Sharma, Sagar and Sharma, Simone},
@@ -354,6 +511,15 @@
 	number  = {12},
 	pages   = {310--316},
 	year    = {2017}
+}
+@article{sherman2005thalamic,
+	title     = {Thalamic relays and cortical functioning},
+	author    = {Sherman, S Murray},
+	journal   = {Progress in brain research},
+	volume    = {149},
+	pages     = {107--126},
+	year      = {2005},
+	publisher = {Elsevier}
 }
 @article{simon1962architecture,
 	issn      = {0003049X},
@@ -393,6 +559,26 @@
 	pages     = {1--2},
 	year      = {2011},
 	publisher = {Springer}
+}
+@article{turing1937computable,
+	title     = {On computable numbers, with an application to the Entscheidungsproblem},
+	author    = {Turing, Alan Mathison},
+	journal   = {Proceedings of the London mathematical society},
+	volume    = {2},
+	number    = {1},
+	pages     = {230--265},
+	year      = {1937},
+	publisher = {Wiley Online Library}
+}
+@article{ullman2012simple,
+	title     = {From simple innate biases to complex visual concepts},
+	author    = {Ullman, Shimon and Harari, Daniel and Dorfman, Nimrod},
+	journal   = {Proceedings of the National Academy of Sciences},
+	volume    = {109},
+	number    = {44},
+	pages     = {18215--18220},
+	year      = {2012},
+	publisher = {National Acad Sciences}
 }
 @incollection{vroon1987man,
 	title     = {Man-machine analogs and theoretical mainstreams in psychology},
