--- a/Source/refs.bib
+++ b/Source/refs.bib
@@ -131,6 +131,16 @@
 	year      = {1999},
 	publisher = {Elsevier}
 }
+@article{dumoulin2008population,
+	title     = {Population receptive field estimates in human visual cortex},
+	author    = {Dumoulin, Serge O and Wandell, Brian A},
+	journal   = {Neuroimage},
+	volume    = {39},
+	number    = {2},
+	pages     = {647--660},
+	year      = {2008},
+	publisher = {Elsevier}
+}
 @inproceedings{erhan2009difficulty,
 	title        = {The difficulty of training deep architectures and the effect of unsupervised pre-training},
 	author       = {Erhan, Dumitru and Manzagol, Pierre-Antoine and Bengio, Yoshua and Bengio, Samy and Vincent, Pascal},
@@ -588,4 +598,14 @@
 	pages     = {393--414},
 	year      = {1987},
 	publisher = {Elsevier}
+}
+@article{yao2005synaptic,
+	author  = {Yao, Haishan and Dan, Yang},
+	year    = {2005},
+	month   = {07},
+	pages   = {206-16},
+	title   = {Synaptic Learning Rules, Cortical Circuits, and Visual Function},
+	volume  = {11},
+	journal = {The Neuroscientist : a review journal bringing neurobiology, neurology and psychiatry},
+	doi     = {10.1177/1073858404272404}
 }
