--- a/Source/chapter3.tex
+++ b/Source/chapter3.tex
@@ -1,5 +1,12 @@
 \chapter{Powiązania uczenia głębokiego i neuronauki}
 
+Modularność działania mózgu jest bardzo wyraźna i prosta w podparciu.
+Dodatkowo, jak się okazuje, jej cechy pozwalają sądzić że bardzo przypomina modularność sztucznych systemów symbolicznych, w szczególności z dziedziny uczenia maszynowego, najczęściej oparte na uczeniu głębokim.
+Poza tym, że można doszukać się podobieństw i spójności strukturalnych, aby móc rzeczywiście mówić o tym, że dziedziny uczenia maszynowego (głównie za sprawą uczenia głębokiego) oraz neuronauki wydają się dążyć do ponownego ze sobą powiązania należy wykazać podobieństwa funkcjonalne.
+Badacze obu dziedzin stale zauważają nowe ścieżki w różne sposoby łączące je ze sobą.
+Uczenie głębokie ponownie skutecznie sugeruje się działaniem mózgu w optymalizacji naszych własnych rozwiązań oraz doszukuje się w takich zapożyczeniach drogi rozwoju uczenia maszynowego \cite{lake2017building}.
+W neuronauce coraz częściej okazuje się, że wykorzystanie pojęć bezpośrednio z uczenia głębokiego jest nie tylko pomocne w konceptualizacji i rozumieniu, ale także wydaje się być bardzo blisko danych empirycznych \cite{dayan2001theoretical, doya1999computations}.
+
 \section{Hipotezy w kierunku integracji głębokiego uczenia oraz neuronauki}
 
 Jak zostało opisane w \hyperref[sec:differences]{sekcji \ref*{sec:differences}}, po początkowej obustronnej kooperacji między uczeniem maszynowym oraz neuronauką zaczęły pojawiać się rozbieżności.
@@ -49,8 +56,19 @@ Dla przykładu echoiczne sieci stanowe (\emph{echo state networks}), w których 
 Warto jednak przyjrzeć się także możliwości, że mózg w rzeczywistości w pewien sposób wykorzystuje metodę gradientu prostego.
 Jest to najskuteczniejsza forma uczenia głębokich sieci neuronowych, w szczególności o dużych rozmiarach, więc być może częściowo odpowiadają także za niesamowite zdolności uczenia się mózgu.
 Jest aktualnie wiele zaproponowanych mechanizmów podobnego uczenia, które byłyby ``biologicznie prawdopodobne''.
-Jedną z nich jest wersja wspomnianego STDP, gdzie neurony mają kodować pochodne błędu wymagane przy propagacji wstecznej w różnicach częstotliwości aktywacji \cite{hinton2016can}.
+Jedną z nich jest wersja wspomnianego STDP, gdzie neurony mają kodować pochodne błędu wymagane przy propagacji wstecznej w różnicach częstotliwości aktywacji (\hyperref[fig:spike-timing-dependent-plasticity]{rysunek \ref*{fig:spike-timing-dependent-plasticity}}) \cite{hinton2016can}.
 Efektywnie oznaczałoby to, że mózg wykorzystuje mechanizm propagacji wstecznej.
+
+\begin{figure}[h!]
+	\includegraphics[width=\textwidth]{Images/SpikeTimingDependentPlasticity}
+	\caption{Plastyczność zależna od momentu spike'a (STDP)}
+	Wykres przedstawia asymetryczne okno czasowe plastyczności zależnej od momentu spike'a (\emph{spike-timing-dependent plasticity}) (źródło: \cite{yao2005synaptic}).
+	Jeśli neuron staje się aktywny przed spike'iem pre-synaptycznym, zmiana jest ujemna, a jeśli po - dodatnia.
+	Geoffrey Hinton sugeruje, że w ten sposób zakodowana może być pochodna błędu, jako względna zmiana synaptyczna \cite{hinton2016can}.
+	\label{fig:spike-timing-dependent-plasticity}
+\end{figure}
+
+Asymmetric time window for spike timing-dependent plasticity
 
 Jeśli jednak odstąpimy od metody gradientu prostego, należy skupić się na innych metodach uczenia i optymalizacji.
 Mózg posiada kilka mechanizmów, które potencjalnie mogłyby spełniać taką rolę.
@@ -78,17 +96,17 @@ Warto zacząć od tego, jakie rodzaje uczenia mogą być wykorzystywane przez st
 
 \begin{itemize}
 	\item Uczenie nadzorowane w kontekście mózgu może nie wydawać się oczywiste.
-	W końcu jeśli wynik jest znany, jak wymagane jest przy takim typie uczenia, to dlaczego mózg miałby się dalej uczyć?
-	Być może jednak szkolenie opiera się na wykorzystaniu właśnie poznanego poprawnego wyniku w celu lepszej generalizacji.
-	Przykładowo mózg człowieka uczącego się strzelać z łuku może po każdym strzale przechowywać wyniki działania wewnętrznych sieci.
-	Po strzale trafionym różnice między nieudanymi a udaną konfiguracją mogą zostać użyte właśnie do uczenia nadzorowanego.
+	      W końcu jeśli wynik jest znany, jak wymagane jest przy takim typie uczenia, to dlaczego mózg miałby się dalej uczyć?
+	      Być może jednak szkolenie opiera się na wykorzystaniu właśnie poznanego poprawnego wyniku w celu lepszej generalizacji.
+	      Przykładowo mózg człowieka uczącego się strzelać z łuku może po każdym strzale przechowywać wyniki działania wewnętrznych sieci.
+	      Po strzale trafionym różnice między nieudanymi a udaną konfiguracją mogą zostać użyte właśnie do uczenia nadzorowanego.
 	\item Uczenie nienadzorowane w kontekście mózgu jest znacznie prostsze do wyjaśnienia.
-	Jest ono bardzo skuteczne w przypadku generalizacji danych z nowej dziedziny.
-	Mogą więc służyć do budowy modeli statystycznych z danych wejściowych, które później z kolei stanowią bardzo dobrą podstawę do innych sposobów uczenia, co czasem nazywa się modelami uprzednio przetrenowanymi (\emph{pre-trained}) i wykorzystywane jest w uczeniu maszynowym \cite{erhan2009difficulty}.
-	Mogą także w przybliżony sposób oceniać cechy świata zewnętrznego, które nie mogą być (lub nie powinny być) empirycznie sprawdzone czy zbadane, np. czy dane zjawisko czy stworzenie powinno się uznać za groźne.
+	      Jest ono bardzo skuteczne w przypadku generalizacji danych z nowej dziedziny.
+	      Mogą więc służyć do budowy modeli statystycznych z danych wejściowych, które później z kolei stanowią bardzo dobrą podstawę do innych sposobów uczenia, co czasem nazywa się modelami uprzednio przetrenowanymi (\emph{pre-trained}) i wykorzystywane jest w uczeniu maszynowym \cite{erhan2009difficulty}.
+	      Mogą także w przybliżony sposób oceniać cechy świata zewnętrznego, które nie mogą być (lub nie powinny być) empirycznie sprawdzone czy zbadane, np. czy dane zjawisko czy stworzenie powinno się uznać za groźne.
 	\item Uczenie przez wzmacnianie mimo wszystko wydaje się być najczęściej wykorzystywane i nawet intuicyjnie najlepiej dopasowane do tego, jak widzimy, że uczy się mózg.
-	Zdecydowana większość działań sprowadza się do wykonania akcji i odebraniu, czy udało się w jej rezultacie uzyskać wynik spodziewany lub oczekiwany lub preferowany, albo odwrotnie, czy nie doprowadziła do negatywnych konsekwencji.
-	W taki sposób uczą się dzieci, w taki sposób uczone są zwierzęta i być może -- na niższym poziomie -- tak uczą się wewnętrzne systemy mózgu człowieka.
+	      Zdecydowana większość działań sprowadza się do wykonania akcji i odebraniu, czy udało się w jej rezultacie uzyskać wynik spodziewany lub oczekiwany lub preferowany, albo odwrotnie, czy nie doprowadziła do negatywnych konsekwencji.
+	      W taki sposób uczą się dzieci, w taki sposób uczone są zwierzęta i być może -- na niższym poziomie -- tak uczą się wewnętrzne systemy mózgu człowieka.
 \end{itemize}
 
 Dla uczenia nadzorowanego musiałby jednak istnieć system porównawczy, pozwalający na utworzenie wektora błędów, który z kolei byłby propagowany wstecz przez jeden z możliwych, biologicznie prawdopodobnych systemów wspomnianych w \hyperref[subsec:brain-optimizes-cost-function]{sekcji \ref*{subsec:brain-optimizes-cost-function}}.
@@ -133,8 +151,12 @@ Model działania mózgu oparty na tych założeniach i hipotezach przedstawiony 
 
 \begin{figure}[ht]
 	\includegraphics[width=\textwidth]{BrainLikeNeuralNetworkArchitecture.pdf}
-	\caption{Prawdopodobna struktura systemowa przetwarzania danych i uczenia sieci funkcjonalnych mózgu}
-	Zaadoptowana z \cite{marblestone2016toward}
+	\caption{Proponowana struktura systemowa działania oraz uczenia się mózgu.}
+	Przetłumaczona oraz zaadoptowana z \cite{marblestone2016toward}.
+	Według niej mózg składa się z wielu wyspecjalizowanych pod-systemów pozwalających na wydajne wykonywanie konkretnych zadań oraz sieci neuronalnych uczonych przy użyciu funkcji kosztu zmiennych względem obszaru i w czasie.
+	Wyspecjalizowane struktury znajdują się przede wszystkich w starszych ewolucyjnie częściach mózgu oraz posiadają również funkcje organizacyjno-sterujące.
+	Zbiór wielu wielokrotnie trenowalnych sieci znajduje się głównie w najmłodszej ewolucyjne korze czołowej.
+	Na funkcje kosztu używane przy ich trenowaniu wpływ mają struktury wyspecjalizowane oraz inne, wcześniej wytrenowane sieci.
 	\label{fig:structure-with-specialized-systems}
 \end{figure}
 
@@ -142,19 +164,19 @@ Z istotniejszych pod-systemów obecnych w mózgu można wyróżnić przede wszys
 
 \begin{itemize}
 	\item \emph{Struktury pamięciowe różnego rodzaju}.
-	Są to centralne systemy dla wszelkich systemów symbolicznych, obecne już od samej maszyny Turinga \cite{turing1937computable}.
-	To, że mózg posiada struktury pamięciowe jest niepodważalne, na co jednak warto zwrócić uwagę to fakt, że musi posiadać wiele rodzajów takowych.
-	Potrzebna jest pamięć długotrwała, robocza oraz bardziej wyspecjalizowane, jak adresowane zawartością (obszar CA3 w hipokampie może działać jak pamięć auto-asocjacyjna zdolna do implementacji tego typu pamięci \cite{rolls2013mechanisms}) czy inne wspomniane na początku tego rozdziału \cite{graves2014neural}.
-	Rola i obecność takich systemów jest w psychologii poznawczej badana już od dłuższego czasu \cite{baddeley2004psychology}.
+	      Są to centralne systemy dla wszelkich systemów symbolicznych, obecne już od samej maszyny Turinga \cite{turing1937computable}.
+	      To, że mózg posiada struktury pamięciowe jest niepodważalne, na co jednak warto zwrócić uwagę to fakt, że musi posiadać wiele rodzajów takowych.
+	      Potrzebna jest pamięć długotrwała, robocza oraz bardziej wyspecjalizowane, jak adresowane zawartością (obszar CA3 w hipokampie może działać jak pamięć auto-asocjacyjna zdolna do implementacji tego typu pamięci \cite{rolls2013mechanisms}) czy inne wspomniane na początku tego rozdziału \cite{graves2014neural}.
+	      Rola i obecność takich systemów jest w psychologii poznawczej badana już od dłuższego czasu \cite{baddeley2004psychology}.
 	\item \emph{Struktury kierujące informacją}.
-	Takim systemem może być struktura uwagowa, również od dłuższego czasu badana w psychologii poznawczej \cite{pashler1999psychology}.
-	Pozwala na ograniczenie natłoku danych docierających do systemów przetwarzania informacji, ograniczenie ich przeładowania oraz wstępną selekcję porcji strumienia o istotnym znaczeniu dla systemu poznającego.
-	Podobnie w przypadku uczenia: pozwala na skupienie się na pojedynczym obiekcie zamiast wszystkich danych, co dodatkowo, jak można zauważyć, przypomina uczenie sieci neuronowych, która skupia się na pojedynczej instancji na raz.
+	      Takim systemem może być struktura uwagowa, również od dłuższego czasu badana w psychologii poznawczej \cite{pashler1999psychology}.
+	      Pozwala na ograniczenie natłoku danych docierających do systemów przetwarzania informacji, ograniczenie ich przeładowania oraz wstępną selekcję porcji strumienia o istotnym znaczeniu dla systemu poznającego.
+	      Podobnie w przypadku uczenia: pozwala na skupienie się na pojedynczym obiekcie zamiast wszystkich danych, co dodatkowo, jak można zauważyć, przypomina uczenie sieci neuronowych, która skupia się na pojedynczej instancji na raz.
 	\item \emph{Ustrukturyzowana reprezentacja stanu}.
-	Takie systemy pozwalają na wydajne wykonywanie złożonych algorytmicznie zadań.
-	Mogą to być systemy kontroli hierarchicznej, planowania przestrzennego, syntaktyki hierarchicznej, programów mentalnych czy wyobraźni \cite{marblestone2016toward}.
-	Większość jest już stosunkowo dobrze poznana i jesteśmy w stanie wskazać prawdopodobne struktury je wykonujące.
-	Są także obszary dopiero badane, takie jak przedmurze, które być może bierze udział w dynamicznym łączeniu informacji z wielu modalności \cite{crick2005function}.
+	      Takie systemy pozwalają na wydajne wykonywanie złożonych algorytmicznie zadań.
+	      Mogą to być systemy kontroli hierarchicznej, planowania przestrzennego, syntaktyki hierarchicznej, programów mentalnych czy wyobraźni \cite{marblestone2016toward}.
+	      Większość jest już stosunkowo dobrze poznana i jesteśmy w stanie wskazać prawdopodobne struktury je wykonujące.
+	      Są także obszary dopiero badane, takie jak przedmurze, które być może bierze udział w dynamicznym łączeniu informacji z wielu modalności \cite{crick2005function}.
 \end{itemize}
 
 Poza głównymi kategoriami takich systemów może znaleźć się znacznie więcej.
@@ -163,16 +185,14 @@ Samo uczenie przez wzmacniane opisywane w \hyperref[subsec:cost-function-is-dive
 Być może więc to temu modelowi działania -- z wieloma wyspecjalizowanymi pod-systemami i uniwersalnymi sieciami szkolonymi przy użyciu odpowiednio dobieranych funkcji kosztu -- mózg radzi sobie z właściwie nieograniczenie szeroką gamą problemów w sposób nieosiągalny dla nowoczesnych systemów uczenia głębokiego i maszynowego.
 Co ta tym idzie, istnieje szansa, że naśladując taki postulowany model działania mózgu jesteśmy w stanie osiągnąć znacznie więcej w tych dziedzinach.
 
-\section{Wpływ powiązań architektonicznych na uczenie maszynowe i neuronaukę}
+\section{W kierunku rozwoju uczenia głębokiego oraz neuronauki}
 
 Rzeczywiste powiązanie metod uczenia maszynowego z działaniem mózgu będzie owocowało rozwojem w obu dziedzinach.
 Głębokie uczenie pozwoli nam lepiej zrozumieć i symulować działanie mózgu.
 W przeciwną stronę naśladowanie działania mózgu w sieciach neuronowych prawdopodobnie poskutkuje znacznie potężniejszymi, efektywniejszymi i bardziej uniwersalnymi systemami.
 W końcu narząd ten rozwijał się przez miliony lat i możemy spodziewać się, że ma w sobie masę kruczków optymalizacyjnych dotąd nam nieznanych.
 
-\subsection{W kierunku rozwoju uczenia głębokiego i maszynowego}
-
-W \hyperref[subsec:brain-optimizes-cost-function]{sekcji \ref*{subsec:brain-optimizes-cost-function}} zostały opisane możliwe biologiczne implementacje propagacji wstecznej, metody gradientu prostego lub innych możliwości przeprowadzania optymalizacji funkcji kosztu.
+W \hyperref[subsec:brain-optimizes-cost-function]{sekcji \ref*{subsec:brain-optimizes-cost-function}} zostały opisane uzasadnione biologiczne implementacje propagacji wstecznej, metody gradientu prostego lub innych możliwości przeprowadzania optymalizacji funkcji kosztu.
 Nie podlega wątpliwości, że jeśli faktycznie mózg w taki sposób operuje, to robi to bardzo efektywnie.
 Istnieje szansa, że rzeczywisty sposób jej implementacji okaże się także znacznie lepszy od naszych aktualnych rozwiązań przy sztucznych sieciach neuronowych.
 
@@ -190,6 +210,17 @@ W mózgu z kolei obecność takich wyspecjalizowanych regionów jest dość pows
 Niewykluczone, że inspirowanie się neuronauką w tym zakresie pozwoli na tworzenie systemów potrafiących wykonywać zadania znacznie bardziej złożone niż dzisiejsze najlepsze sieci.
 Niektórzy badaczy argumentują, że właśnie takie podejście jest kluczem do budowy maszyn ``myślących'' tak, jak robią to ludzie \cite{lake2017building}.
 
-\subsection{W kierunku rozwoju neuronauki}
+Trzeba również zaznaczyć, że powiązania opisane w tym rozdziale są na razie tylko hipotezami.
+Są one jednak empirycznie testowalne.
 
-Idee 
+Jeśli mózg rzeczywiście optymalizuje funkcję kosztu i uda nam się ją poprawnie odgadnąć, finalny stan mózgowy powinien być bliski jej optimum.
+Można później porównać pola recepcyjne optymalizowane w symulacji z tymi zmierzonymi w mózgu za pomocą badania fMRI.
+Istnieją techniki, które pozwalają na wykonanie tego typu pomiarów i porównań \cite{dumoulin2008population}.
+Innym sposobem mogą być wprowadzanie zakłóceń do struktury mózgowej, na przykład poprzez zmianę połączeń synaptycznych.
+Efekt odpowiednio drobna zmiana powinna zostać ``wycofana'', system powinien wrócić do lokalnego minimum funkcji kosztu.
+
+Udowodnienie drugiej hipotezy jest znacznie trudniejsze.
+Przede wszystkich ważne jest rozwinięcie i udoskonalnie wszelkich mapowań mózgu, zarówno funkcjonalnych, jak i strukturalnych.
+Można by było się spodziewać, że dla każdej funkcji kosztu obecne będą odmienne typy neuronów czy chociażby samych połączeń synaptycznych.
+
+W końcu, jeśli założymy prawdziwość hipotezy trzeciej, że wiele różnych struktur bierze wspólnie udział w działaniach poznawczych czy obliczeniach, to zrozumienie funkcji przetwarzania danych każdego z obszarów będzie prowadzić do umożliwienia przewidywania mierzalnych zasad plastyczności \cite{marblestone2016toward}.
